--- a/style/css/style.css
+++ b/style/css/style.css
@@ -571,31 +571,48 @@ article {
           text-align: center;
           margin: 1vw; }
     #wrapper #dashboard .details {
-      grid-template-columns: repeat(12, 1fr); }
+      grid-template-columns: repeat(12, 1fr);
+      color: #6a82a0; }
       #wrapper #dashboard .details #time {
         display: grid;
         justify-items: center;
         align-items: center;
         border-right: 2px solid #6a82a0;
-        color: #6a82a0; }
+        color: #6a82a0;
+        padding: 2vw 0 0 0; }
         #wrapper #dashboard .details #time img {
           width: 10vw; }
       #wrapper #dashboard .details #history {
         border-right: 2px solid #6a82a0; }
       #wrapper #dashboard .details #country {
         display: grid;
-        width: 35vw; }
+        width: 35vw;
+        margin: 0 0 1vw 4vw; }
+        #wrapper #dashboard .details #country h4 {
+          color: #242f41; }
+        #wrapper #dashboard .details #country img {
+          width: 1vw; }
         #wrapper #dashboard .details #country .mapInfo {
-          display: grid;
+          display: inline-block;
           grid-template-columns: repeat(3, 1fr);
-          justify-items: center; }
+          justify-items: center;
+          margin: 0 0 0 4vw; }
+        #wrapper #dashboard .details #country .kortInfo {
+          width: 13vw;
+          position: absolute;
+          top: 17vw;
+          left: 77vw; }
       #wrapper #dashboard .details #history {
         display: grid;
         justify-items: center;
-        align-items: center; }
+        align-items: center;
+        height: 22vw; }
       #wrapper #dashboard .details #history,
       #wrapper #dashboard .details #allDonation {
-        border-top: 2px solid #6a82a0; }
+        border-top: 2px solid #6a82a0;
+        display: grid;
+        justify-items: center;
+        align-items: center; }
     #wrapper #dashboard .category {
       justify-items: center;
       align-items: center; }
@@ -606,6 +623,37 @@ article {
 
 .display {
   display: grid; }
+
+#overallDonations {
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+  grid-template-rows: 90% 10%;
+  width: 35vw;
+  height: 250px;
+  grid-gap: 10px; }
+
+.graph {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-column: span 10;
+  grid-gap: 10px;
+  border: 1px solid black;
+  align-items: flex-end;
+  overflow: hidden; }
+
+.week {
+  background-color: green;
+  background-color: blue; }
+
+.week:nth-child(2n) {
+  background-color: darkblue; }
+
+span {
+  text-align: center; }
+
+.kortSpan {
+  text-align: center;
+  margin: 0 3vw 0 0; }
 
 @media only screen and (max-width: 700px) {
   article #donation p {
@@ -967,8 +1015,6 @@ article {
         margin: 2vw 0 2vw 0; }
       article footerIndex img {
         width: 8vw; }
-  .mobileSetting {
-    display: block !important; }
   #wrapper {
     width: 100vw;
     display: grid;
@@ -1137,20 +1183,31 @@ article {
         grid-template-columns: repeat(12, 1fr); }
         #wrapper #dashboard .details #time {
           display: grid;
-          grid-template-rows: repeat(2, 50%);
+          width: 100vw;
+          height: 60vw;
           justify-items: center;
           align-items: center;
-          border-right: 2px solid #6a82a0; }
+          border-bottom: 2px solid #6a82a0;
+          padding: 2vw 0 0 0; }
           #wrapper #dashboard .details #time img {
-            width: 2vw; }
+            width: 25vw; }
         #wrapper #dashboard .details #history {
-          border-right: 2px solid #6a82a0; }
+          border-right: 2px solid #6a82a0;
+          height: 100%; }
         #wrapper #dashboard .details #country {
-          display: grid; }
+          display: grid;
+          width: 100vw;
+          margin: 0; }
           #wrapper #dashboard .details #country .mapInfo {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             justify-items: center; }
+          #wrapper #dashboard .details #country .kortInfo {
+            width: 51vw;
+            font-size: 3.5vw;
+            position: absolute;
+            top: 114vw;
+            left: 52vw; }
         #wrapper #dashboard .details #history {
           display: grid;
           justify-items: center;
@@ -1168,29 +1225,31 @@ article {
   .display {
     display: grid; } }
 
-#overallDonations {
-  display: grid;
-  grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: 90% 10%;
-  width: 35vw;
-  height: 250px;
-  grid-gap: 10px; }
-
-.graph {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-column: span 10;
-  grid-gap: 10px;
-  border: 1px solid black;
-  align-items: flex-end;
-  overflow: hidden; }
-
-.week {
-  background-color: green;
-  background-color: blue; }
-
-.week:nth-child(2n) {
-  background-color: darkblue; }
-
-span {
-  text-align: center; }
+@media only screen and (max-width: 500px) {
+  #overallDonations {
+    display: grid;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: 40vw 10vw;
+    width: 90vw;
+    height: 50vw;
+    grid-gap: 10px; }
+  .graph {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-column: span 10;
+    grid-gap: 10px;
+    border: 1px solid black;
+    align-items: flex-end;
+    overflow: hidden; }
+  .week {
+    background-color: green;
+    background-color: blue; }
+  .week:nth-child(2n) {
+    background-color: darkblue; }
+  span {
+    text-align: center; }
+  .kortSpan {
+    text-align: center;
+    margin: 0 3vw 0 0; }
+  .mobileSetting {
+    display: block !important; } }
