--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: afta sans;
-  src: url(fonts/aftasans.woff2); }
+  src: url(../../fonts/aftasans.woff2); }
 
 * {
   margin: 0;
@@ -73,6 +73,9 @@ html {
   background-color: #6a82a0; }
 
 .popUp {
+  -webkit-box-shadow: 0px 10px 300px 200px rgba(36, 47, 65, 0.46);
+  -moz-box-shadow: 0px 10px 300px 200px rgba(36, 47, 65, 0.46);
+  box-shadow: 0px 0px 300px 200px rgba(36, 47, 65, 0.6);
   position: fixed;
   width: 60vw;
   left: 19vw;
@@ -624,10 +627,10 @@ article {
     width: 80vw;
     background-color: #6a82a0; }
   .popUp {
-    position: fixed;
+    position: absolute;
     width: 80vw;
     left: 8vw;
-    height: 100%;
+    height: 112%;
     background-color: #fff;
     display: none; }
     .popUp .close {
@@ -715,8 +718,8 @@ article {
       .popUp #add-cafe-form .leftForm {
         font-size: 3vw;
         width: 80vw;
-        /* height: 100%; */
-        padding: 47vw 0 0 3vw;
+        height: 55vh;
+        padding: 1vh 0 0 2.5vh;
         border-left: none; }
         .popUp #add-cafe-form .leftForm .iconDonation {
           width: 15vw; }
@@ -725,7 +728,7 @@ article {
       .popUp #add-cafe-form .rightForm {
         width: 80vw;
         padding: 1vw 0 0 3vw;
-        height: 0vw;
+        height: 45vw;
         font-size: 3vw; }
         .popUp #add-cafe-form .rightForm img {
           width: 23.3vw;
