--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -7,7 +7,7 @@ $color6: #e0ecfc;
 
 @font-face {
   font-family: afta sans;
-  src: url(fonts/aftasans.woff2);
+  src: url(../../fonts/aftasans.woff2);
 }
 
 * {
@@ -101,6 +101,9 @@ html {
   background-color: $color2;
 }
 .popUp {
+  -webkit-box-shadow: 0px 10px 300px 200px rgba(36, 47, 65, 0.46);
+  -moz-box-shadow: 0px 10px 300px 200px rgba(36, 47, 65, 0.46);
+  box-shadow: 0px 0px 300px 200px rgba(36, 47, 65, 0.6);
   position: fixed;
   width: 60vw;
   left: 19vw;
@@ -883,10 +886,10 @@ article {
     background-color: $color2;
   }
   .popUp {
-    position: fixed;
+    position: absolute;
     width: 80vw;
     left: 8vw;
-    height: 100%;
+    height: 112%;
     background-color: #fff;
     display: none;
 
@@ -997,8 +1000,8 @@ article {
       .leftForm {
         font-size: 3vw;
         width: 80vw;
-        /* height: 100%; */
-        padding: 47vw 0 0 3vw;
+        height: 55vh;
+        padding: 1vh 0 0 2.5vh;
         border-left: none;
 
         .iconDonation {
@@ -1011,7 +1014,7 @@ article {
       .rightForm {
         width: 80vw;
         padding: 1vw 0 0 3vw;
-        height: 0vw;
+        height: 45vw;
         font-size: 3vw;
         img {
           width: 23.3vw;
