--- a/style/css/style.css
+++ b/style/css/style.css
@@ -616,6 +616,9 @@ article {
         display: grid;
         justify-items: center;
         align-items: center; }
+        #wrapper #dashboard .details #history img,
+        #wrapper #dashboard .details #allDonation img {
+          width: 3vw; }
     #wrapper #dashboard .category {
       justify-items: center;
       align-items: center; }
@@ -1255,4 +1258,15 @@ span {
     text-align: center;
     margin: 0 3vw 0 0; }
   .mobileSetting {
-    display: block !important; } }
+    display: block !important; }
+  #allDonation ul {
+    width: 100vw; }
+  #allDonation li {
+    list-style-type: none;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    list-style-type: none;
+    width: 25vw; }
+  #allDonation li:before {
+    content: url(../../image/icon_donater_lille.svg); } }
