--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -515,6 +515,8 @@ article {
     p {
       text-align: center;
       font-size: 1vw;
+      margin: 1vw 0 0 0;
+      width: 31vw;
     }
   }
 
@@ -1367,6 +1369,8 @@ span {
       p {
         text-align: center;
         font-size: 4vw;
+        margin: 1vw 0 0 0;
+        width: 75vw;
       }
     }
     #donationInfo {
