code structure & login small chances

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -41,6 +41,11 @@ html {
       color: #fff;
       font-size: 0.9vw;
       display: inline-block; }
+    #login .wrapper .wrongPassword {
+      display: none;
+      text-align: center;
+      width: 65%;
+      color: red; }
     #login .wrapper img {
       width: 15vw;
       margin: 1vw 0 0 6vw; }
