--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -17,6 +17,13 @@ $color6: #e0ecfc;
   font-weight: 100;
 }
 
+#admin input {
+  float: right;
+  margin-right: 5vw;
+  margin-top: 10px;
+  width: 20vw;
+}
+
 html {
   overflow-x: hidden;
 }
