--- a/style/css/style.css
+++ b/style/css/style.css
@@ -12,7 +12,8 @@
   float: right;
   margin-right: 5vw;
   margin-top: 10px;
-  width: 20vw; }
+  width: 20vw;
+  border: 1px solid #6a82a0; }
 
 html {
   overflow-x: hidden; }
@@ -24,6 +25,16 @@ html {
   width: 50px;
   height: 50px;
   background-color: green; }
+
+#allDonation li {
+  width: 100%;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 20% 40% 40%; }
+
+#allDonation li:before {
+  content: url(../../image/icon_donater_lille.svg);
+  width: 45%; }
 
 .person {
   text-align: center; }
@@ -175,75 +186,75 @@ html {
       background-color: #3b589e;
       text-align: left;
       padding: 0 0 0 3.2vw; }
-  .popUp #add-cafe-form {
+  .popUp #add-donation-form {
     display: grid;
     font-size: 1.2vw;
     grid-template-columns: 30vw 30vw;
     height: 40vw;
     color: #6a82a0; }
-    .popUp #add-cafe-form .hidden {
+    .popUp #add-donation-form .hidden {
       display: none; }
-    .popUp #add-cafe-form .leftForm {
+    .popUp #add-donation-form .leftForm {
       width: 24vw;
       padding: 1vw 0 0 3vw;
       border-left: 0.2vw solid; }
-      .popUp #add-cafe-form .leftForm .iconDonation {
+      .popUp #add-donation-form .leftForm .iconDonation {
         width: 3vw; }
-      .popUp #add-cafe-form .leftForm .img {
+      .popUp #add-donation-form .leftForm .img {
         width: 2vw; }
-    .popUp #add-cafe-form .rightForm {
+    .popUp #add-donation-form .rightForm {
       width: 25vw;
       padding: 1vw 0 0 3vw; }
-      .popUp #add-cafe-form .rightForm img {
+      .popUp #add-donation-form .rightForm img {
         width: 23.3vw; }
-    .popUp #add-cafe-form .navnForm {
+    .popUp #add-donation-form .navnForm {
       display: inline-block;
       width: 10vw; }
-      .popUp #add-cafe-form .navnForm .navnW {
+      .popUp #add-donation-form .navnForm .navnW {
         width: 9vw;
         border: 0.1vw solid #6a82a0;
         height: 2.3vw; }
-    .popUp #add-cafe-form .efternavnForm {
+    .popUp #add-donation-form .efternavnForm {
       display: inline-block;
       width: 14vw; }
-      .popUp #add-cafe-form .efternavnForm .eNavnW {
+      .popUp #add-donation-form .efternavnForm .eNavnW {
         width: 13vw;
         border: 0.1vw solid #6a82a0;
         height: 2.3vw; }
-    .popUp #add-cafe-form .emailW {
+    .popUp #add-donation-form .emailW {
       width: 23.3vw;
       border: 0.1vw solid #6a82a0;
       height: 2.3vw; }
-    .popUp #add-cafe-form .landW {
+    .popUp #add-donation-form .landW {
       width: 23.5vw;
       padding: 0 0 0 8vw;
       height: 2vw;
       color: #6a82a0; }
-    .popUp #add-cafe-form .countryS {
+    .popUp #add-donation-form .countryS {
       color: #6a82a0;
       padding: 1vw; }
-    .popUp #add-cafe-form .pengePlacering {
+    .popUp #add-donation-form .pengePlacering {
       width: 22vw;
       padding: 0.6vw 0 0.6vw 1vw;
       border: 0.1vw solid #6a82a0;
       color: #6a82a0;
       font-size: 1vw; }
-    .popUp #add-cafe-form .kort {
+    .popUp #add-donation-form .kort {
       width: 23vw;
       margin: 1vw 0 0vw 0; }
-    .popUp #add-cafe-form #betalingDropdown {
+    .popUp #add-donation-form #betalingDropdown {
       display: none;
       font-size: 0.8vw;
       margin: 0 0 0.5vw 0; }
-    .popUp #add-cafe-form .fuldNavn {
+    .popUp #add-donation-form .fuldNavn {
       width: 23vw;
       border: 0.1vw solid #6a82a0;
       color: #6a82a0; }
-    .popUp #add-cafe-form .dato {
+    .popUp #add-donation-form .dato {
       width: 11.2vw;
       border: 0.1vw solid #6a82a0;
       color: #6a82a0; }
-    .popUp #add-cafe-form select {
+    .popUp #add-donation-form select {
       /* styling */
       background-color: white;
       border: 0.1vw solid #6a82a0;
@@ -258,7 +269,7 @@ html {
       box-sizing: border-box;
       -webkit-appearance: none;
       -moz-appearance: none; }
-    .popUp #add-cafe-form select.minimallandW {
+    .popUp #add-donation-form select.minimallandW {
       background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
       background-position: calc(100% - 1.74vw) calc(1.2vw + 0vw), calc(100% - 1.3vw) calc(1.2vw + 0vw), calc(100% - 2.5em) 0.5vw;
       background-size: 0.5vw 0.5vw, 0.5vw 0.5vw, 0.1vw 1.5em;
@@ -267,14 +278,14 @@ html {
       padding: 0.5vw 0 0.5vw 8vw;
       margin: 0 0 1vw 0;
       color: #6a82a0; }
-    .popUp #add-cafe-form select.minimallandW:focus {
+    .popUp #add-donation-form select.minimallandW:focus {
       background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
       background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
       background-size: 5px 5px, 5px 5px, 1px 1.5em;
       background-repeat: no-repeat;
       border-color: #6a82a0;
       outline: 0; }
-    .popUp #add-cafe-form select.minimalTekstil {
+    .popUp #add-donation-form select.minimalTekstil {
       background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
       background-position: calc(100% - 1.74vw) calc(1.2vw + 0vw), calc(100% - 1.3vw) calc(1.2vw + 0vw), calc(100% - 2.5em) 0.5vw;
       background-size: 0.5vw 0.5vw, 0.5vw 0.5vw, 0.1vw 1.5em;
@@ -283,14 +294,14 @@ html {
       padding: 0.5vw 0 0.5vw 6vw;
       margin: 0 0 2vw 0;
       color: #6a82a0; }
-    .popUp #add-cafe-form select.minimalTekstil:focus {
+    .popUp #add-donation-form select.minimalTekstil:focus {
       background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
       background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
       background-size: 5px 5px, 5px 5px, 1px 1.5em;
       background-repeat: no-repeat;
       border-color: #6a82a0;
       outline: 0; }
-    .popUp #add-cafe-form select.minimalFoder {
+    .popUp #add-donation-form select.minimalFoder {
       background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
       background-position: calc(100% - 1.74vw) calc(1.2vw + 0vw), calc(100% - 1.3vw) calc(1.2vw + 0vw), calc(100% - 2.5em) 0.5vw;
       background-size: 0.5vw 0.5vw, 0.5vw 0.5vw, 0.1vw 1.5em;
@@ -298,7 +309,7 @@ html {
       width: 23.4vw;
       padding: 0.5vw 0 0.5vw 7vw;
       color: #6a82a0; }
-    .popUp #add-cafe-form select.minimalFoder:focus {
+    .popUp #add-donation-form select.minimalFoder:focus {
       background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
       background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
       background-size: 5px 5px, 5px 5px, 1px 1.5em;
@@ -615,10 +626,12 @@ article {
         #wrapper #dashboard .details #country img {
           width: 1vw; }
         #wrapper #dashboard .details #country .mapInfo {
-          display: inline-block;
+          display: grid;
           grid-template-columns: repeat(3, 1fr);
           justify-items: center;
           margin: 0 0 0 1vw; }
+          #wrapper #dashboard .details #country .mapInfo p {
+            text-align: center; }
         #wrapper #dashboard .details #country .kortInfo {
           width: 13vw;
           position: absolute;
@@ -667,11 +680,10 @@ article {
   overflow: hidden; }
 
 .week {
-  background-color: green;
-  background-color: blue; }
+  background-color: #242f41; }
 
 .week:nth-child(2n) {
-  background-color: darkblue; }
+  background-color: #6a82a0; }
 
 span {
   text-align: center; }
@@ -693,7 +705,7 @@ span {
       width: 31vw;
       margin: 1vw 0 0 25vw; }
   .footerPopUp {
-    height: 40vw;
+    height: 25vw;
     width: 80vw;
     background-color: #6a82a0; }
   .popUp {
@@ -778,81 +790,82 @@ span {
         background-color: #3b589e;
         text-align: left;
         padding: 0 0 0 3.2vw; }
-    .popUp #add-cafe-form {
+    .popUp #add-donation-form {
       display: grid;
       grid-template-columns: 100%;
       height: 100%;
       color: #6a82a0; }
-      .popUp #add-cafe-form .hidden {
+      .popUp #add-donation-form .hidden {
         display: none; }
-      .popUp #add-cafe-form .leftForm {
+      .popUp #add-donation-form .leftForm {
         font-size: 3vw;
         width: 80vw;
-        height: 55vh;
+        height: auto;
         padding: 1vh 0 0 2.5vh;
-        border-left: none; }
-        .popUp #add-cafe-form .leftForm .iconDonation {
+        border-left: none;
+        margin-top: 2vh; }
+        .popUp #add-donation-form .leftForm .iconDonation {
           width: 15vw; }
-        .popUp #add-cafe-form .leftForm .img {
+        .popUp #add-donation-form .leftForm .img {
           width: 10vw; }
-      .popUp #add-cafe-form .rightForm {
+      .popUp #add-donation-form .rightForm {
         width: 80vw;
         padding: 1vw 0 0 3vw;
         height: 45vw;
         font-size: 3vw; }
-        .popUp #add-cafe-form .rightForm img {
+        .popUp #add-donation-form .rightForm img {
           width: 23.3vw;
           display: none; }
-      .popUp #add-cafe-form .navnForm {
+      .popUp #add-donation-form .navnForm {
         display: inline-block;
         width: 73vw; }
-        .popUp #add-cafe-form .navnForm .navnW {
+        .popUp #add-donation-form .navnForm .navnW {
           width: 73vw;
           border: 0.1vw solid #6a82a0;
           height: 7vw; }
-      .popUp #add-cafe-form .efternavnForm {
+      .popUp #add-donation-form .efternavnForm {
         display: inline-block;
         width: 73vw; }
-        .popUp #add-cafe-form .efternavnForm .eNavnW {
+        .popUp #add-donation-form .efternavnForm .eNavnW {
           width: 73vw;
           border: 0.1vw solid #6a82a0;
           height: 7vw; }
-      .popUp #add-cafe-form .emailW {
+      .popUp #add-donation-form .emailW {
         width: 73vw;
         border: 0.1vw solid #6a82a0;
         height: 7vw; }
-      .popUp #add-cafe-form .landW {
+      .popUp #add-donation-form .landW {
         width: 73vw;
         padding: 0 0 0 8vw;
         height: 2vw;
         color: #6a82a0; }
-      .popUp #add-cafe-form .countryS {
+      .popUp #add-donation-form .countryS {
         color: #6a82a0;
         padding: 1vw; }
-      .popUp #add-cafe-form .pengePlacering {
+      .popUp #add-donation-form .pengePlacering {
         width: 70vw;
         height: 8vw;
         padding: 0vw 0 0vw 2vw;
         border: 0.1vw solid #6a82a0;
         color: #6a82a0;
         font-size: 3vw; }
-      .popUp #add-cafe-form .kort {
+      .popUp #add-donation-form .kort {
         width: 72vw;
         margin: 1vw 4vw 0vw 0; }
-      .popUp #add-cafe-form #betalingDropdown {
+      .popUp #add-donation-form #betalingDropdown {
         display: none;
         font-size: 2.8vw;
         width: 72vw;
         margin: 0 0 0.5vw 0; }
-      .popUp #add-cafe-form .fuldNavn {
+      .popUp #add-donation-form .fuldNavn {
         width: 70vw;
         border: 0.1vw solid #6a82a0;
         color: #6a82a0; }
-      .popUp #add-cafe-form .dato {
+      .popUp #add-donation-form .dato {
         width: 34.8vw;
         border: 0.1vw solid #6a82a0;
         color: #6a82a0; }
-      .popUp #add-cafe-form select {
+      .popUp #add-donation-form select {
         /* styling */
         background-color: white;
         border: 0.1vw solid #6a82a0;
@@ -867,7 +880,7 @@ span {
         box-sizing: border-box;
         -webkit-appearance: none;
         -moz-appearance: none; }
-      .popUp #add-cafe-form select.minimallandW {
+      .popUp #add-donation-form select.minimallandW {
         background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
         background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
         background-size: 5px 5px, 5px 5px, 1px 1.5em;
@@ -876,14 +889,14 @@ span {
         padding: 0.5vw 0 0.5vw 8vw;
         margin: 0 0 5vw 0;
         color: #6a82a0; }
-      .popUp #add-cafe-form select.minimallandW:focus {
+      .popUp #add-donation-form select.minimallandW:focus {
         background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
         background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
         background-size: 5px 5px, 5px 5px, 1px 1.5em;
         background-repeat: no-repeat;
         border-color: #6a82a0;
         outline: 0; }
-      .popUp #add-cafe-form select.minimalTekstil {
+      .popUp #add-donation-form select.minimalTekstil {
         background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
         background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
         background-size: 5px 5px, 5px 5px, 1px 1.5em;
@@ -892,14 +905,14 @@ span {
         padding: 0.5vw 0 0.5vw 6vw;
         margin: 0 0 5vw 0;
         color: #6a82a0; }
-      .popUp #add-cafe-form select.minimalTekstil:focus {
+      .popUp #add-donation-form select.minimalTekstil:focus {
         background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
         background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
         background-size: 5px 5px, 5px 5px, 1px 1.5em;
         background-repeat: no-repeat;
         border-color: #6a82a0;
         outline: 0; }
-      .popUp #add-cafe-form select.minimalFoder {
+      .popUp #add-donation-form select.minimalFoder {
         background-image: linear-gradient(45deg, transparent 50%, #6a82a0 50%), linear-gradient(135deg, #6a82a0 50%, transparent 50%), linear-gradient(to right, #ccc, #ccc);
         background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
         background-size: 5px 5px, 5px 5px, 1px 1.5em;
@@ -907,7 +920,7 @@ span {
         width: 73vw;
         padding: 0.5vw 0 0.5vw 7vw;
         color: #6a82a0; }
-      .popUp #add-cafe-form select.minimalFoder:focus {
+      .popUp #add-donation-form select.minimalFoder:focus {
         background-image: linear-gradient(45deg, #6a82a0 50%, transparent 50%), linear-gradient(135deg, transparent 50%, #6a82a0 50%), linear-gradient(to right, #ccc, #ccc);
         background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em, calc(100% - 2.5em) 0.5em;
         background-size: 5px 5px, 5px 5px, 1px 1.5em;
@@ -1017,7 +1030,8 @@ span {
       article #donationInfo img {
         width: 30vw; }
     article #gallery {
-      grid-template-columns: repeat(2, 1fr); }
+      grid-template-columns: repeat(2, 1fr);
+      margin-top: 5vw; }
       article #gallery .imgIndex {
         width: 50vw; }
     article footerIndex {
@@ -1229,6 +1243,8 @@ span {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             justify-items: center; }
+            #wrapper #dashboard .details #country .mapInfo p {
+              font-size: 4vw; }
           #wrapper #dashboard .details #country .kortInfo {
             width: 51vw;
             font-size: 3.5vw;
@@ -1238,7 +1254,8 @@ span {
         #wrapper #dashboard .details #history {
           display: grid;
           justify-items: center;
-          align-items: center; }
+          align-items: center;
+          border: none; }
         #wrapper #dashboard .details #history,
         #wrapper #dashboard .details #allDonation {
           border-top: 2px solid #6a82a0; }
@@ -1259,7 +1276,8 @@ span {
     grid-template-rows: 40vw 10vw;
     width: 90vw;
     height: 50vw;
-    grid-gap: 10px; }
+    grid-gap: 10px;
+    margin-top: 3vw; }
   .graph {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
@@ -1269,10 +1287,9 @@ span {
     align-items: flex-end;
     overflow: hidden; }
   .week {
-    background-color: green;
-    background-color: blue; }
+    background-color: #242f41; }
   .week:nth-child(2n) {
-    background-color: darkblue; }
+    background-color: #6a82a0; }
   span {
     text-align: center; }
   .kortSpan {
@@ -1314,11 +1331,16 @@ span {
     position: fixed;
     width: 100vw;
     top: 0vw;
-    height: 22vh;
+    height: 25vh;
     text-align: center;
-    background-color: blue;
+    background-color: #6a82a0;
     left: 0;
     font-size: 2.5vw; }
+    #wrapper nav .menu li {
+      font-size: 4vw;
+      margin-top: 6vw; }
+      #wrapper nav .menu li img {
+        width: 3vw; }
   .mobileSetting {
     display: block !important; }
   #allDonation ul {
@@ -1327,8 +1349,54 @@ span {
     list-style-type: none;
     align-items: center;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 10% 45% 45%;
     list-style-type: none;
-    width: 25vw; }
-  #allDonation li:before {
-    content: url(../../image/icon_donater_lille.svg); } }
+    width: 100vw; }
+  #admin input {
+    float: right;
+    margin-right: 5vw;
+    margin-top: 0;
+    width: 50vw;
+    border: 1px solid #6a82a0; }
+  #login .wrapper {
+    width: 100vw;
+    /* margin: 10vw 0 0 25vw; */
+    height: 100vh;
+    background-color: #242f41; }
+    #login .wrapper .loginBox {
+      display: block; }
+    #login .wrapper img {
+      width: 40vw;
+      margin: 6vw 0 0 15vw; }
+    #login .wrapper h2 {
+      color: #fff;
+      font-size: 7.2vw;
+      text-align: left;
+      margin: 5vw 0 0 15vw; }
+    #login .wrapper .pengePlacering {
+      width: 50vw;
+      height: 6vw;
+      margin: 5vw 0 0 6vw;
+      /* margin: 0 auto; */
+      font-size: 4vw; }
+    #login .wrapper .bottomLogin {
+      width: 75vw; }
+      #login .wrapper .bottomLogin p {
+        font-size: 3.5vw;
+        margin-left: 6vw; }
+    #login .wrapper button {
+      width: 27vw;
+      /* font-size: 17vw; */
+      height: 10.4vw;
+      font-size: 4.2vw;
+      color: #fff;
+      margin: 5vw 0.5vw 0 6.5vw;
+      background-color: #242f41;
+      border: 0.1vw solid #fff; }
+  #admin #wrapper #dashboard .settings {
+    grid-row: span 1;
+    display: grid;
+    height: 64vh;
+    grid-template-rows: auto auto; }
+    #admin #wrapper #dashboard .settings #profile {
+      border: none; } }
