--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -22,6 +22,7 @@ $color6: #e0ecfc;
   margin-right: 5vw;
   margin-top: 10px;
   width: 20vw;
+  border: 1px solid $color2;
 }
 
 html {
@@ -38,6 +39,16 @@ html {
   background-color: green;
 }
 
+#allDonation li {
+  width: 100%;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 20% 40% 40%;
+}
+#allDonation li:before {
+  content: url(../../image/icon_donater_lille.svg);
+  width: 45%;
+}
 .person {
   text-align: center;
 }
@@ -229,7 +240,7 @@ html {
     }
   }
 
-  #add-cafe-form {
+  #add-donation-form {
     display: grid;
     font-size: 1.2vw;
     grid-template-columns: 30vw 30vw;
@@ -863,10 +874,14 @@ article {
         }
 
         .mapInfo {
-          display: inline-block;
+          display: grid;
           grid-template-columns: repeat(3, 1fr);
           justify-items: center;
           margin: 0 0 0 1vw;
+
+          p {
+            text-align: center;
+          }
         }
 
         .kortInfo {
@@ -934,12 +949,11 @@ article {
 }
 
 .week {
-  background-color: green;
-  background-color: blue;
+  background-color: $color1;
 }
 
 .week:nth-child(2n) {
-  background-color: darkblue;
+  background-color: $color2;
 }
 
 span {
@@ -969,7 +983,7 @@ span {
     }
   }
   .footerPopUp {
-    height: 40vw;
+    height: 25vw;
     width: 80vw;
     background-color: $color2;
   }
@@ -1075,7 +1089,7 @@ span {
       }
     }
 
-    #add-cafe-form {
+    #add-donation-form {
       display: grid;
       grid-template-columns: 100%;
       height: 100%;
@@ -1088,9 +1102,10 @@ span {
       .leftForm {
         font-size: 3vw;
         width: 80vw;
-        height: 55vh;
+        height: auto;
         padding: 1vh 0 0 2.5vh;
         border-left: none;
+        margin-top: 2vh;
 
         .iconDonation {
           width: 15vw;
@@ -1419,6 +1434,7 @@ span {
 
     #gallery {
       grid-template-columns: repeat(2, 1fr);
+      margin-top: 5vw;
 
       .imgIndex {
         width: 50vw;
@@ -1715,6 +1731,10 @@ span {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             justify-items: center;
+
+            p {
+              font-size: 4vw;
+            }
           }
           .kortInfo {
             width: 51vw;
@@ -1729,6 +1749,7 @@ span {
           display: grid;
           justify-items: center;
           align-items: center;
+          border: none;
         }
 
         #history,
@@ -1762,6 +1783,7 @@ span {
     width: 90vw;
     height: 50vw;
     grid-gap: 10px;
+    margin-top: 3vw;
   }
 
   .graph {
@@ -1775,12 +1797,11 @@ span {
   }
 
   .week {
-    background-color: green;
-    background-color: blue;
+    background-color: $color1;
   }
 
   .week:nth-child(2n) {
-    background-color: darkblue;
+    background-color: $color2;
   }
 
   span {
@@ -1834,11 +1855,20 @@ span {
     position: fixed;
     width: 100vw;
     top: 0vw;
-    height: 22vh;
+    height: 25vh;
     text-align: center;
-    background-color: blue;
+    background-color: $color2;
     left: 0;
     font-size: 2.5vw;
+
+    li {
+      font-size: 4vw;
+      margin-top: 6vw;
+
+      img {
+        width: 3vw;
+      }
+    }
   }
 
   .mobileSetting {
@@ -1853,12 +1883,78 @@ span {
     list-style-type: none;
     align-items: center;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 10% 45% 45%;
     list-style-type: none;
-    width: 25vw;
+    width: 100vw;
   }
 
-  #allDonation li:before {
-    content: url(../../image/icon_donater_lille.svg);
+  #admin input {
+    float: right;
+    margin-right: 5vw;
+    margin-top: 0;
+    width: 50vw;
+    border: 1px solid $color2;
+  }
+
+  #login .wrapper {
+    width: 100vw;
+    /* margin: 10vw 0 0 25vw; */
+    height: 100vh;
+    background-color: #242f41;
+
+    .loginBox {
+      display: block;
+    }
+
+    img {
+      width: 40vw;
+      margin: 6vw 0 0 15vw;
+    }
+
+    h2 {
+      color: #fff;
+      font-size: 7.2vw;
+      text-align: left;
+      margin: 5vw 0 0 15vw;
+    }
+
+    .pengePlacering {
+      width: 50vw;
+      height: 6vw;
+      margin: 5vw 0 0 6vw;
+      /* margin: 0 auto; */
+      font-size: 4vw;
+    }
+
+    .bottomLogin {
+      width: 75vw;
+
+      p {
+        font-size: 3.5vw;
+        margin-left: 6vw;
+      }
+    }
+
+    button {
+      width: 27vw;
+      /* font-size: 17vw; */
+      height: 10.4vw;
+      font-size: 4.2vw;
+      color: #fff;
+      margin: 5vw 0.5vw 0 6.5vw;
+      background-color: #242f41;
+      border: 0.1vw solid #fff;
+    }
+  }
+
+  #admin #wrapper #dashboard .settings {
+    grid-row: span 1;
+    display: grid;
+    height: 64vh;
+    grid-template-rows: auto auto;
+
+    #profile {
+      border: none;
+    }
   }
 }
