--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1365,36 +1365,37 @@ span {
   #login .wrapper {
     width: 100vw;
     /* margin: 10vw 0 0 25vw; */
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     background-color: #242f41; }
     #login .wrapper .loginBox {
       display: block; }
     #login .wrapper img {
-      width: 40vw;
-      margin: 6vw 0 0 15vw; }
+      width: 64vw;
+      margin: 12vw 0 0 5vw; }
     #login .wrapper h2 {
       color: #fff;
-      font-size: 7.2vw;
+      font-size: 5.2vw;
       text-align: left;
-      margin: 5vw 0 0 15vw; }
+      margin: 5vw 0 0 4vw; }
     #login .wrapper .pengePlacering {
-      width: 50vw;
+      width: 65vw;
       height: 6vw;
-      margin: 5vw 0 0 6vw;
+      margin: 3vw 0 0 4vw;
       /* margin: 0 auto; */
       font-size: 4vw; }
     #login .wrapper .bottomLogin {
       width: 75vw; }
       #login .wrapper .bottomLogin p {
         font-size: 3.5vw;
-        margin-left: 6vw; }
+        margin-left: 5vw; }
     #login .wrapper button {
       width: 27vw;
       /* font-size: 17vw; */
       height: 10.4vw;
       font-size: 4.2vw;
       color: #fff;
-      margin: 5vw 0.5vw 0 6.5vw;
+      margin: 5vw 0.5vw 0 4.5vw;
       background-color: #242f41;
       border: 0.1vw solid #fff; }
   #admin #wrapper #dashboard .settings {
