--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -1904,7 +1904,8 @@ span {
   #login .wrapper {
     width: 100vw;
     /* margin: 10vw 0 0 25vw; */
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     background-color: #242f41;
 
     .loginBox {
@@ -1912,21 +1913,21 @@ span {
     }
 
     img {
-      width: 40vw;
-      margin: 6vw 0 0 15vw;
+      width: 64vw;
+      margin: 12vw 0 0 5vw;
     }
 
     h2 {
       color: #fff;
-      font-size: 7.2vw;
+      font-size: 5.2vw;
       text-align: left;
-      margin: 5vw 0 0 15vw;
+      margin: 5vw 0 0 4vw;
     }
 
     .pengePlacering {
-      width: 50vw;
+      width: 65vw;
       height: 6vw;
-      margin: 5vw 0 0 6vw;
+      margin: 3vw 0 0 4vw;
       /* margin: 0 auto; */
       font-size: 4vw;
     }
@@ -1936,7 +1937,7 @@ span {
 
       p {
         font-size: 3.5vw;
-        margin-left: 6vw;
+        margin-left: 5vw;
       }
     }
 
@@ -1946,7 +1947,7 @@ span {
       height: 10.4vw;
       font-size: 4.2vw;
       color: #fff;
-      margin: 5vw 0.5vw 0 6.5vw;
+      margin: 5vw 0.5vw 0 4.5vw;
       background-color: #242f41;
       border: 0.1vw solid #fff;
     }
