--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -39,6 +39,10 @@ html {
   background-color: green;
 }
 
+#allDonation ul {
+  width: 100%;
+}
+
 #allDonation li {
   width: 100%;
   list-style-type: none;
@@ -919,7 +923,7 @@ article {
     }
 
     footer {
-      height: 10vw;
+      height: 11.9vw;
       min-height: 0;
       background-color: $color2;
     }
@@ -1961,6 +1965,7 @@ span {
 
     #profile {
       border: none;
+      min-height: 102vh;
     }
   }
 }
