--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -1969,3 +1969,9 @@ span {
     }
   }
 }
+#admin #dashboard .settings #profile {
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  border-bottom: none;
+}
