--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -739,7 +739,7 @@ article {
       #profile {
         min-height: 40vh;
         width: 38vw;
-        padding: 0 0 1vw 0;
+        padding: 2vh 0 1vw 0;
         border-right: 2px solid $color2;
         border-bottom: 2px solid $color2;
 
@@ -758,7 +758,7 @@ article {
       #fundraise {
         min-height: 30vh;
         width: 38vw;
-        padding: 2vw 0 0 0;
+        padding: 0.9vw 0 0 0;
         border-right: 2px solid $color2;
 
         .bottomPos {
@@ -1791,6 +1791,12 @@ span {
   }
 }
 @media only screen and (max-width: 500px) {
+  .kortSpan::before {
+    content: " ";
+    clear: right;
+    display: block;
+  }
+
   #overallDonations {
     display: grid;
     grid-template-columns: repeat(11, 1fr);
@@ -1825,7 +1831,7 @@ span {
 
   .kortSpan {
     text-align: center;
-    margin: 0 3vw 0 0;
+    margin: 0;
   }
 
   .accordion {
